--- a/css/styles.css
+++ b/css/styles.css
@@ -24,13 +24,13 @@ body {
   line-height: 1.7;
 }
 /* скидає крапочки біля списків */
-.list {
+ul {
   padding-left: 0;
   margin: 0;
   list-style: none;
 }
 /* скидає підкреслення в посиланнях */
-.link {
+a {
   text-decoration: none;
 }
 /* скидає margin в заголовках і абзацах */
@@ -73,7 +73,23 @@ img {
   letter-spacing: 0.03em;
   text-align: center;
 }
-/* Header */
+/* Subtitle */
+.subtitle {
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.subtitle--inverse {
+  margin-bottom: 20px;
+  color: var(--primary-background-color);
+}
+/* DONE Header */
 .header {
   border-bottom: 1px solid #ececec;
 }
@@ -98,11 +114,11 @@ img {
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
-.accent {
+.logo__accent {
   color: var(--accent-color);
 }
 
-/* site nav */
+/* DONE site nav */
 .header__site-nav {
   display: flex;
   gap: 50px;
@@ -118,7 +134,6 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  text-decoration: none;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -157,7 +172,7 @@ img {
   gap: 10px;
   fill: var(--primary-text-color);
   color: var(--primary-text-color);
-  text-decoration: none;
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -225,7 +240,7 @@ img {
   background-color: #188ce8;
 }
 
-/*Features  */
+/* Features  */
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -238,6 +253,7 @@ img {
   clip-path: inset(50%);
   margin: -1px;
 }
+/* DONE */
 .features {
   display: flex;
   align-items: flex-start;
@@ -256,19 +272,7 @@ img {
 
   background-color: var(--team-background-color);
 }
-.features__title,
-.join-container__title,
-.mailing-form__label {
-  margin-top: 0;
-  margin-bottom: 10px;
-  color: var(--title-text-color);
 
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
 /* Section Product */
 .product-section {
   padding-top: 0;
@@ -360,7 +364,7 @@ img {
   background-color: var(--accent-color);
   fill: var(--primary-background-color);
 }
-/* Portfolio main */
+/* НЕ ПЕРЕНЕСЛА !!!! Portfolio main */
 .portfolio__buttons {
   margin-bottom: 50px;
   display: flex;
@@ -714,11 +718,7 @@ textarea {
 /* .footer-item > a {
   width: 100%;
 } */
-.join-container__title,
-.mailing-form__label {
-  margin-bottom: 20px;
-  color: var(--primary-background-color);
-}
+
 .join-container {
   display: flex;
   flex-direction: column;
