--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -17,6 +17,7 @@
 @import './components/common/button';
 @import './components/card';
 @import './components/common/social';
+@import './components/subtitle';
 // Layout
 @import './layout/footer/footer';
 @import './layout/footer/address';
