--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -362,14 +362,28 @@ a {
   border-radius: 50%;
   background-color: transparent;
   fill: var(--icon-color);
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social__link:hover, .social__link:focus {
   background-color: var(--accent-color);
   fill: var(--primary-background-color);
+}
+
+.subtitle {
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.subtitle--inverse {
+  margin-bottom: 20px;
+  color: var(--primary-background-color);
 }
 
 .footer {
@@ -395,8 +409,6 @@ a {
 .footer__social-link {
   background-color: rgba(255, 255, 255, 0.1);
   fill: var(--primary-background-color);
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer__social-link:hover, .footer__social-link:focus {
   background-color: var(--accent-color);
