--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -29,9 +29,8 @@
     border-left: 1.85px solid var(--title-text-color);
     border-radius: 2px;
     pointer-events: none;
-    @include transition(background-color);
-    @include transition(fill);
-    @include transition(border-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 }
 .checkbox__input:checked+.checkbox__icon {
