--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -19,8 +19,7 @@
     fill: var(--icon-color);
     border: 1px solid #afb1b8;
     border-radius: 4px;
-    @include transition(border-color);
-    @include transition(fill);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 &__link:hover,
