--- a/sass/components/common/_social.scss
+++ b/sass/components/common/_social.scss
@@ -18,8 +18,8 @@
     border-radius: 50%;
     background-color: transparent;
     fill: var(--icon-color);
-    @include transition(background-color);
-    @include transition(fill);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
